fixed bug on mobile
fixed the calculator screen disappearing on rotation of the mobile device,

added theme to attribution

--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ ul {
 
 /* CSS RESET END */
 
+body {
+  display: flex;
+  justify-content: center;
+}
 
 h1 {
   margin-top: 10px;
@@ -125,10 +129,7 @@ h3 {
   width: 95%;
   max-width: 350px;
   height: 700px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
 }
 
 .header {
@@ -138,7 +139,6 @@ h3 {
   display: flex;
   justify-content: space-between;
 }
-
 
 .screen {
   width: 100%;
@@ -189,7 +189,7 @@ h3 {
 
 #del,
 #reset,
-#equals{
+#equals {
   font-size: 1.3rem;
   padding-top: 24px;
 }
@@ -270,44 +270,54 @@ h3 {
   left: 25px;
 }
 
-
 .attribution {
-  position: fixed;
-  bottom: 0;
+  position: relative;
+  bottom: -20px;
+  font-size: 0.6rem;
+  display: flex;
+  justify-content: center;
 }
 
-
 @media screen and (min-width: 1000px) {
-  .calculator{
+  .calculator {
     max-width: 550px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 0;
   }
 
-  .screen{
+  .screen {
     height: 130px;
   }
 
-  .buttons-container{
+  .buttons-container {
     height: 500px;
   }
 
-  .buttons{
+  .buttons {
     font-size: 2.5rem;
   }
 
   #del,
   #equals,
-  #reset{
+  #reset {
     font-size: 1.8rem;
   }
 
-  .screen-operation{
+  .screen-operation {
     font-size: 1rem;
   }
 
-  .screen-text{
+  .screen-text {
     margin-top: 10px;
   }
-  .header{
+  .header {
     padding-top: 20px;
+  }
+
+  .attribution {
+    font-size: 1rem;
   }
 }
